# human-quadruped-variable-admittance

./: CMakeLists.txt  README.md  find_arduino.sh  package.xml
Admittance_Figures/: adm_plotting.py  adm_with_keyboard_plotting.py  plot_Potential.m  plot_Rest_Figures.asv  plot_Rest_Figures.m  plot_fm_fv_only.py  potential.eps  potential.fig  real_adm_plotting.py  rotationExp_Fv.eps  rotationExp_Fv.fig  translationExp_Energy.eps  translationExp_Energy.fig  translationExp_velocity.eps  translationExp_velocity.fig
Pascal_Data/: linear_fit.py  new_lin_fit.py  reading_values_IRT.py
force_Folder/: PlotForce.py
matlabstuff/: meshy  meshy.m  smin.m
msg/: ExternalForce.msg
src/scripts_cpp/: adm_controller.cpp  adm_controller.h  adm_controller_with_keyboard.cpp  drafting.cpp  forceMeasure.cpp  forceMeasure.h  fs_recieve.cpp  keyboard_force_input.cpp  keyboard_test.cpp  my_example_walk.cpp  real_adm_control.cpp  test_fs_fb_recieve.cpp
src/scripts_cpp/other/: StaticJacobianWork.txt  force_reading.cpp  idontknow.cpp  kdl_example.cpp  positionFind.txt  restToprint.txt  sort_of_worked.cpp  stackingForce.cpp  thing_that_worked.cpp
src/scripts_py/: CSRL_orientation.py  activate_suction.py  admittance_MassDAmp.py  admittance_draft.py  admittance_target_reaching.py  admittance_trajectory_tracking.py  class SerialNode(Node):.py  draft.py  fs_give.py  target_reaching_task_space.py  test_fs_give.py  test_fs_give_3rd_order.py  test_fs_give_correct_order.py  test_fs_give_everything.py  test_fs_give_with_average_subtraction.py  trajectory_tracking_task_space.py  vel_cmd.py
src/scripts_py/csvFolder/: position_data.csv  velocity_data.csv
